# restaurant-review-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: github-issue-template.md
legacy/: web_crawlers.py
legacy/fetchers/: __init__.py  selenium_fetcher.py
legacy/parsers/: parsers.py
resources/: crawling.sql
src/: main.py  settings.py  test.py
src/application/: __init__.py  crawl_application.py
src/crawlers/: __init__.py  crawler.py  crawlers.py  dynamic_crawler.py  fetchers.py  parser.py  parsers.py  selenium.py  static_crawler.py  web_crawlers.py
src/crawlers/legacy/: web_crawlers.py
src/crawlers/legacy/fetchers/: fetchers.py  requests_fetcher.py  selenium_fetcher.py
src/databases/: db_manager.py
src/fetchers/: __init__.py  dynamic_fetcher.py  fetcher.py
src/models/: __init__.py  blogs.py  contents.py  restaurants.py
src/models/enums/: __init__.py  blog_platform.py  restaurant_cuisine_type.py
src/parsers/: parser.py
src/services/: __init__.py  crawler_service.py
src/utils/: __init__.py  bs4_util.py  console_util.py  console_utils.py  datetime_utils.py  general_utils.py  restaurant_crawl.py  selenium_util.py  selenium_utils.py  time_utils.py  validate_util.py
src/validators/: __init__.py  blog_validator.py  http_validator.py
